services/intranet/1.0.0/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-default-web
  template:
    metadata:
      labels:
        app: deployment-default-web
    spec:
      containers:
        - image: nginx
          name: web
          volumeMounts:
            - mountPath: /test
              name: vol1
      volumes:
        - name: vol1
          persistentVolumeClaim:
            claimName: myclaim
